syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (UserById) returns (User) {}
}

message UserById {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}